# ttc-bot

./: .gitignore  .gitmodules  Cargo.toml
test-command/: Cargo.toml
test-command/src/: lib.rs
ttc-bot/: Cargo.toml
ttc-bot-common/: Cargo.toml
ttc-bot-common/src/: lib.rs  types.rs
ttc-bot-dylibs/groups/config/: Cargo.toml
ttc-bot-dylibs/groups/general/: Cargo.toml
ttc-bot-dylibs/groups/general/src/: lib.rs
ttc-bot-dylibs/groups/moderation/: Cargo.toml
ttc-bot-dylibs/groups/support/: Cargo.toml
ttc-bot-dylibs/groups/support/src/: lib.rs
ttc-bot/src/: main.rs
ttc-bot/src/client/: event_handler.rs  hooks.rs
ttc-bot/src/events/: interactions.rs  listener.rs
ttc-bot/src/groups/: localisation.rs
