[package]
name = "test-command"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ttc-bot-common = { path = "../ttc-bot-common" }
poise = { path = "../poise" }
#poise = { git = "https://github.com/kangalioo/poise" }
