[package]
name = "ttc-bot-common"
version = "0.1.0"
edition = "2021"

[lib]
name = "ttc_bot_common"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { path = "../serenity", features = ["collector"] }
tokio = { version = "1.14" }
log = { version = "0.4.14", features = ["std"] }
