[package]
name = "ttc-bot-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
log = { version = "0.4.14", features = ["std"] }
#poise = { git = "https://github.com/kangalioo/poise" }
poise = { path = "../poise" }
sqlx = { version = "0.5.9", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "macros",
    "offline",
] }
