[package]
name = "general"
version = "0.1.0"
edition = "2021"

[lib]
name = "general"
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { path = "../../../serenity", features = ["standard_framework", "framework"] }
