[package]
name = "moderation"
version = "0.1.0"
edition = "2021"

[lib]
name = "moderation"
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { path = "../../../serenity" }
log = { version = "0.4.14", features = ["std"] }
